errorメッセージも加えるようにした。

--- a/app/views/users/help.html.erb
+++ b/app/views/users/help.html.erb
@@ -1,5 +1,7 @@
 <h1>Users#help</h1>
 <p>Find me in app/views/users/help.html.erb</p>
 
-<%= @user.id %>
-<%= @user.password %>
+<p>ユーザID: <%= @user.id %> </p>
+<p>パスワード: <%= @user.password %> </p>
+<p><%= @error_msg %></p>
+<p><%= @msg %></p>
