chanege password_field

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.text_field :id, class: "form-control" %>
 
     <%= f.label :password, "パスワード" %>
-    <%= f.text_field :password, class: "form-control" %>
+    <%= f.password_field :password, class: "form-control" %>
 
     <%= f.submit "勤怠時間を確認する。", class: "btn btn-primary" %>
 <% end %>
