--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-6 col-md-offset-3">
-      <h1>FrexTimeCheck</h1>
+      <h1>FlexTimeCheck</h1>
       <p>勤之助のログインIDとパスワードを入力してください。</p>
       <%= render 'form' %>
   </div>
