ログイン成功時のメッセージをテンプレート化した。

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,8 @@
 <div class="container">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-8 col-md-offset-3">
       <h1>FlexTimeCheck</h1>
       <p>勤之助のログインIDとパスワードを入力してください。</p>
       <%= render 'form' %>
+      <%= render 'login_result' %>
   </div>
-  <%= @error_msg %>
-  <%= @msg %>
 </div>
