フッターを追加した。

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,5 +4,6 @@
       <p>勤之助のログインIDとパスワードを入力してください。</p>
       <%= render 'form' %>
       <%= render 'login_result' %>
+      <%= render 'footer' %>
   </div>
 </div>
