footerの文言を追加した。

--- a/app/views/users/_footer.html.erb
+++ b/app/views/users/_footer.html.erb
@@ -1,3 +1,6 @@
 <p class="text-center">
 　お問い合わせ、不具合がある場合は<a href="mailto:fendo181git@gmail.com">こちら</a>からお願いします。
 </p>
+<p class="text-center">
+　デザインの修正や、機能の改善に関してもっと面白くできる方は<a href="https://github.com/Fendo181/FlexTimeCheck">こちら</a>
+</p>
