`さん`に変更した。
さんをつけろよデコ助野郎

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<!-- 偉大な、かすみん先輩に関係 :prey: -->
+<!-- 偉大な、かすみんさんに関係 :prey: -->
 <div class="container">
   <div class="col-md-8 col-md-offset-3">
       <h1>FlexTimeCheck</h1>
